# tempo

./: .gitignore  CHANGES.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  NOTES.md  README.md  TODO.md  index.html  package-lock.json  package.json  stuff.rs  svelte.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  website.yml
.svelte-kit/: ambient.d.ts  tsconfig.json
crates/dawparse/: Cargo.toml
crates/dawutils/: Cargo.toml  README.md
crates/fs/: DESIGN.md  README.md
crates/fs/tempo_fs_attachment/: Cargo.toml
crates/fs/tempo_fs_channel/: Cargo.toml
crates/fs/tempo_fs_channel/src/: lib.rs
crates/fs/tempo_fs_comment/: Cargo.toml
crates/fs/tempo_fs_comment/src/: lib.rs
crates/fs/tempo_fs_note/: Cargo.toml
crates/fs/tempo_fs_note/src/: lib.rs
crates/fs/tempo_fs_provider/: Cargo.toml  DESIGN.md  README.md
crates/fs/tempo_fs_provider/src/: lib.rs
crates/fs/tempo_fs_session/: Cargo.toml
crates/fs/tempo_fs_session/src/: id.rs  lib.rs  meta.rs
crates/sql/: Cargo.toml  README.md  package.json  tsconfig.json
crates/sql/src/: commands.rs  decode.rs  lib.rs  wrapper.rs
crates/tempo/: Cargo.toml
crates/tempo/capabilities/: tempo.json
crates/tempo/src/: main.rs  tempo.rs
crates/tempo_db/: Cargo.toml  README.md
crates/tempo_db/src/: connection.rs  db.rs  dbs.rs  error.rs  lib.rs  notify.rs  schema.rs
crates/tempo_filesync/: Cargo.toml
crates/tempo_fs_provider/: Cargo.toml  DESIGN.md  README.md
crates/tempo_fs_provider/old/: id.rs  lib.rs  session.rs
crates/tempo_fs_provider/src/: attachment.rs  error.rs  lib.rs  map.rs  message.rs  object.rs  provider.rs  session.rs  test.rs
crates/tempo_id/: Cargo.toml  README.md
crates/tempo_id/src/: lib.rs
crates/tempo_misc/: Cargo.toml  README.md
crates/tempo_misc/src/: lib.rs  types.rs
crates/tempo_provider/: Cargo.toml  README.md
crates/tempo_provider/src/: error.rs  lib.rs
crates/tempo_session/: Cargo.toml  README.md
crates/tempo_session/src/: error.rs  fs.rs  lib.rs  provider.rs  session.rs  types.rs
crates/tempo_sql/: Cargo.toml
crates/tempo_tauri/: Cargo.toml  README.md  tauri.conf.json
crates/tempo_tauri/capabilities/: tempo.json
crates/tempo_tauri/permissions/: tempo.toml
crates/tempo_tauri/src/: db.rs  main.rs  tempo.rs  types.rs
crates/tempo_tauri/src-old/: commands.rs  db.rs  note.rs  structure.rs  tests.rs  verify.rs
crates/tempo_tauri/src-old/daw/: project.rs
crates/tempo_tauri/src-old/daw/ableton/: db.rs  project.rs
crates/tempo_tauri/src/providers/: mod.rs
crates/tempo_tauri/src/providers/fs/: stores.rs
crates/tempo_test/: .gitignore  Cargo.toml  README.md
crates/tempo_test/src/: lib.rs
crates/tempo_types/: Cargo.toml  README.md
crates/tempo_types/src/: lib.rs  object.rs  provider.rs
old-frontend/: App.tsx  Plugins.tsx  RefreshButton.tsx  XButton.tsx  commands.ts  types.ts
old-frontend/attachment/: Attachment.tsx  NewNoteAttachment.tsx  NewProjectRender.tsx  NoteAttachment.tsx
old-frontend/bar/: ViewToggle.tsx
old-frontend/components/ui/: LICENSE
old-frontend/note/: Note.tsx
old-frontend/tables/: FileTable.tsx  PluginTable.tsx
old-frontend/views/: HomeView.tsx  UsersView.tsx
scripts/: README.md  reable  unable  xmlfmt
scripts/diagnostic_macos/: build_diagnostic.sh  diagnostic.spec  launch.py  main.py
src/: MacOSSetup.tsx  Player.tsx  PossibleDefaultCopyPath.tsx  Settings.tsx  SettingsForm.tsx  Setup.tsx  Store.tsx  app.html  main.tsx  misc.tsx
src-old/: attachment.rs  channel.rs  daw.rs  shared.rs  state.rs  types.rs
src-old/daw/: plugin.rs
src-old/tempo_fs_provider/: README.md
src-old/tempo_fs_provider/src/: error.rs  lib.rs  map.rs  object.rs
src-old/tempo_provider/: README.md
src-old/tempo_provider/src/: error.rs  lib.rs
src-tauri/: Cargo.toml
src-tauri/bindings/: AttachmentType.ts  AudioFileInfo.ts  AudioType.ts  BackendError.ts  ChannelData.ts  ChannelDoc.ts  Comment.ts  FileErr.ts  FileRef.ts  FileType.ts  FolderData.ts  FolderInfo.ts  MissingFileRef.ts  NewAttachment.ts  NewAudioAttachment.ts  NewComment.ts  NewNote.ts  NewProjectAttachment.ts  PluginRef.ts  PluginScan.ts  PluginType.ts  ProjectFileRefScan.ts  ProjectInfo.ts  ProjectType.ts  RepliableComment.ts  SharedAttachment.ts  SharedAudioAttachment.ts  SharedFileInfo.ts  SharedNote.ts  SharedProjectAttachment.ts  SharedProjectData.ts  TempoResult.ts
src-tauri/capabilities/: tempo.json
src-tauri/src/: channel.rs  commands.rs  daw.rs  db.rs  file.rs  folder.rs  main.rs  misc.rs  note.rs  shared.rs  state.rs  structure.rs  tempo.rs  tests.rs  types.rs
src-tauri/src-old/: automerge.rs  tempo.rs
src-tauri/src-old/file/: audio.rs
src-tauri/src/daw/: ableton.rs  macos.rs  plugin.rs  project.rs
src-tauri/src/daw/ableton/: als.rs  db.rs  project.rs
src-tauri/src/providers/: fs.rs  mod.rs
src-tauri/src/providers/fs/: mod.rs
src-tauri/test_assets/: README.md
src/attachment/: AudioAttachment.tsx  CopyProjectButton.tsx  NewProjectAttachmentScan.tsx  PlayAudioButton.tsx  ProjectAttachment.tsx
src/bar/: TopBar.tsx
src/components/: theme-provider.tsx
src/lib/: utils.ts
src/note/: Comments.tsx  NoteBox.tsx  ReplyText.tsx
src/old/: BrowserView.tsx  NoteModal.tsx
src/routes/: +page.svelte
src/views/: ChatView.tsx  FolderView.tsx  HomeView.tsx  TreeView.tsx
website/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/download/: +page.svelte
website/src/routes/manual/: +page.svelte
