[workspace]
resolver = "2"
package.license = "GPL-3.0-only"
package.edition = "2021"
package.rust-version = "1.82.0"
package.repository = "https://github.com/mattheson/tempo"
package.authors = ["Matt Taniguchi"]

members = [
    "crates/dawutils",
    "crates/tempo",

    "crates/tempo_db",
    "crates/tempo_id",
    "crates/tempo_misc",
    "crates/tempo_provider",
    "crates/tempo_test",
    "crates/tempo_types",

    "crates/fs/tempo_fs_attachment",
    "crates/fs/tempo_fs_channel",
    "crates/fs/tempo_fs_comment",
    "crates/fs/tempo_fs_note",
    "crates/fs/tempo_fs_provider",
    "crates/fs/tempo_fs_session",
]

[workspace.dependencies]
dawutils.path = "crates/dawutils"
tempo.path = "crates/tempo"

tempo_db.path = "crates/tempo_db"
tempo_id.path = "crates/tempo_id"
tempo_misc.path = "crates/tempo_misc"
tempo_provider.path = "crates/tempo_provider"
tempo_test.path = "crates/tempo_test"
tempo_types.path = "crates/tempo_types"

tempo_fs_attachment.path = "crates/fs/tempo_fs_attachment"
tempo_fs_channel.path = "crates/fs/tempo_fs_channel"
tempo_fs_comment.path = "crates/fs/tempo_fs_comment"
tempo_fs_note.path = "crates/fs/tempo_fs_note"
tempo_fs_provider.path = "crates/fs/tempo_fs_provider"
tempo_fs_session.path = "crates/fs/tempo_fs_session"

anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
sha2 = "0.10"
test-log = "0.2"
env_logger = "*"
