[workspace]
resolver = "2"
package.license = "GPL-3.0-only"
package.edition = "2021"
package.rust-version = "1.82.0"
package.repository = "https://github.com/mattheson/tempo"
package.authors = ["Matt Taniguchi"]

members = [
    "crates/dawutils",
    "crates/tempo",

    "crates/tempo_db",
    "crates/tempo_misc",
    "crates/tempo_test",
    "crates/tempo_filesync",
]

[workspace.dependencies]
dawutils.path = "crates/dawutils"
tempo.path = "crates/tempo"

tempo_db.path = "crates/tempo_db"
tempo_misc.path = "crates/tempo_misc"
tempo_test.path = "crates/tempo_test"
tempo_filesync.path = "crate/tempo_filesync"

anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = ["protocol-asset", "devtools", "test"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "fs" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
test-log = "0.2"
env_logger = "*"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
crossbeam = "0.8"