[package]
name = "sql"
description = "Vendored version of Tauri's SQL plugin."
license = "Apache-2.0 OR MIT"

authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

links = "sql"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
thiserror = "2"
futures-core = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "json", "time", "runtime-tokio"] }
time = "0.3"
tokio = { workspace = true, features = ["sync"] }
indexmap = { version = "2", features = ["serde"] }