[package]
name = "tempo_db"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tempo_misc.workspace = true

anyhow.workspace = true
log.workspace = true
rusqlite.workspace = true
tokio.workspace = true
tauri.workspace = true
serde_json.workspace = true

dashmap = "6"

[dev-dependencies]
env_logger.workspace = true
test-log.workspace = true
tempo_test.workspace = true