[package]
name = "tempo_fs_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
zstd = "0.13"

tempo_db.workspace = true
tempo_provider.workspace = true
tempo_misc.workspace = true

anyhow.workspace = true
tauri.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde_json.workspace = true
log.workspace = true