[package]
name = "tempo_provider"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tempo_db.workspace = true
tempo_misc.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tauri.workspace = true
tokio.workspace = true