[package]
name = "tempo_tauri"
version = "0.0.0-beta.0"
description = "refined collaboration and version management for Ableton"
authors = ["mattheson"]
edition = "2021"
rust-version = "1.82.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-sql = "2"
tauri-plugin-devtools = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
automerge = "0.5"
autosurgeon = "0.8"
log = "0.4"
ulid = { version = "1", features = ["serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
flate2 = "1"
hex = "0.4"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
infer = "0.16"
tokio = { version = "1", features = ["rt"] }
time = "0.3"
native-dialog = "0.7"
sqlx = { version = "0.8", features = ["sqlite"] }
anyhow = "1.0.93"
dashmap = "6.1.0"
uuid = "1.11.0"

# notify = "6"
# trash = "5"

[dev-dependencies]
test-log = "0.2"
env_logger = "*"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
