[package]
name = "tempo_tauri"
version = "0.0.0-beta.0"
description = "refined collaboration and version management for Ableton"
authors = ["mattheson"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tempo_misc.path = "../tempo_misc"

tauri.workspace = true
serde.workspace = true
serde_json.workspace = true

tauri-plugin-dialog = "^2"
tauri-plugin-process = "^2"
tauri-plugin-shell = "^2"
tauri-plugin-log = "^2"
tauri-plugin-store = "^2"
tauri-plugin-sql = { version = "^2", features = ["sqlite"] }
tauri-plugin-devtools = "^2"

flate2 = "1"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
infer = "0.16"
time = "0.3"
native-dialog = "0.7"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
