[package]
name = "tempo_fs_provider"
version = "0.1.0"
edition = "2021"

[dependencies]
tempo_fs_session.path = "../tempo_fs_session"

tempo_provider.workspace = true
tempo_db.workspace = true
tempo_types.workspace = true
tempo_id.workspace = true

anyhow.workspace = true
tauri.workspace = true
tokio.workspace = true