[package]
name = "tempo_fs_session"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
tempo_fs_channel.workspace = true
sql.workspace = true
tempo_provider.workspace = true
tempo_types.workspace = true
tempo_id.workspace = true

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true